test/cases/compile_errors/bit_shifting_only_works_on_integer_types.zig
export fn entry() void {
    const x = &@as(u8, 1) << 10;
    _ = x;
}

// error
//
// :2:15: error: bit shifting operation expected integer type, found '*const u8'
